--- a/config/locales/ka.yml
+++ b/config/locales/ka.yml
@@ -161,7 +161,7 @@ ka:
     Energy: ენერგეტიკის
     Patriarchy: საპატრიარქოს
     georgian_budget_2014: საქართველოს ბიუჯეტი 2014
-    please_move_funds: გთხოვთ გადაიტანოთ თანხა მარცხენა პროგრამიდან მარჯვენა სამი მთავარი პროგრამიდან ერთ-ერთში.
+    please_move_funds: გთხოვთ გადაიტანოთ თანხა მარცხენა სვეტში მოცემული პროგრამებიდან/ქვეპროგრამიდან მარჯვენა სვეტის სამი მთავარი პრიორიტეტის თქვენთვის სასურველ პროგრამაში/ქვეპროგრამაში.
     conclusion_title: რა შეიძლება მოხდეს?
     funds_shown_millions: (თანხა ნაჩვენებია მილიონ ლარებში)
     close_continue: გაგრძელდეს თანხის გადარიცხვა
